# wheel_primes_rust

./: .gitignore  Cargo.toml  primes2000.json
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs  pritchard_limit.rs  pritchard_n.rs  segmented_limit.rs  segmented_n.rs
fuzz/lib/: types.rs
prime-scripts/: Cargo.toml
prime-sieves/: Cargo.toml
prime-sieves/benches/: sieve_big.rs  sieve_giant.rs  sieve_small.rs
prime-sieves/examples/: pritchard_big.rs  segmented_big.rs
prime-sieves/src/: pritchard.rs  segmented.rs  utils.rs
src/: lib.rs  pritchard.rs  segmented.rs  utils.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
