[package]
name = "wheel_primes_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde =  { version = "1", features = ["derive"] }

[dev-dependencies]
bincode = { version = "1" }
serde_arrays = "0.1"
once_cell = "1"

[lib]
crate-type = ["cdylib", "rlib"]
