[package]
name = "prime-sieves"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde =  { version = "1", features = ["derive"] }

[dev-dependencies]
primal-sieve = "0.3"
test-utils = { path = "../test-utils" }

[lib]
crate-type = ["cdylib", "rlib"]
